fotolar eklendi ve sayfa tasarımına devam edildi

--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,28 @@
 </head>
 <body>
     
+    <!-- header -->
+    <header id="header__home">
+        <div class="container">
+            <nav class="main-nav">
+                <img src="../images/logo.png" alt="logo" class="main-nav__logo">
+                <ul class="main-nav__items">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+<div class="header-content">
+    <h1>I'm Hasan Süheyl YAZICI
+        <span class="typewrite" data-period="1000" data-type="['Developer','Designer']"></span>
+    </h1>
+    <a href="" class="btn-light"></a>
+</div>
+        </div>
+    </header>
+
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/type-writer.js"></script>
 </body>
 </html>
