home pages completed

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@1&family=Open+Sans:ital,wght@1,300&family=Rubik+Beastly&family=Sorts+Mill+Goudy&display=swap"
       rel="stylesheet"
@@ -51,6 +52,82 @@
         </div>
       </div>
     </header>
+
+<!-- section a  -->
+    <section id="home__a" class="text-center py-2">
+      <div class="container">
+        <h2 class="section-title">Introduction</h2>
+        <div class="border-bottom"></div>
+        <p class="lead"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum accusamus voluptatum cupiditate quidem quasi eaque veritatis saepe perspiciatis quo asperiores.</p>
+
+        <div class="skills my-3">
+          <div>
+            <i class="fa-solid fa-code-fork fa-3x"></i>
+            <h3>Javascript</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, officiis.</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-laptop-code fa-3x"></i>
+            <h3>Python</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, officiis.</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-bug fa-3x"></i>
+            <h3>Css</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, officiis.</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-code fa-3x"></i>
+            <h3>Databases</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, officiis.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+ <!-- section b --> 
+    <section id="home__b" class="text-center py-2">
+      <div class="container">
+        <h2 class="section-title">Profile</h2>
+        <div class="bordor-bottom"></div>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis asperiores accusantium incidunt ea quaerat dicta.</p>
+      </div>
+      <div class="profile">
+        <div>
+          <ul>
+            <li><i class="fas fa-users fa-3x"></i></li>
+            <li class="title">Customers</li>
+            <li class="number">50</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><i class="fas fa-award fa-3x"></i></li>
+            <li class="title">Projects</li>
+            <li class="number">50</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><i class="fas fa-hourglass-start fa-3x"></i></li>
+            <li class="title">Hours</li>
+            <li class="number">50</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li><i class="fas fa-code-branch fa-3x"></i></li>
+            <li class="title">Projects Completed</li>
+            <li class="number">0</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+
+
+
+
 
     <script src="../js/jquery.min.js"></script>
     <script src="../js/type-writer.js"></script>
