process ve footer hazırlandı

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
     <section id="home__b" class="text-center py-2">
       <div class="container">
         <h2 class="section-title">Profile</h2>
-        <div class="bordor-bottom"></div>
+        <div class="border-bottom"></div>
         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis asperiores accusantium incidunt ea quaerat dicta.</p>
       </div>
       <div class="profile">
@@ -124,8 +124,59 @@
       </div>
     </section>
 
+    <!-- section c -->
+    <section id="home__c" class="text-center py-2">
+      <div class="container">
+        <h2 class="section-title">Working Process</h2>
+        <div class="border-bottom"></div>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, laudantium.</p>
+        <div class="process">
+          <div>
+            <i class="fa-solid fa-layer-group fa-4x process__icon my-2">
+              <div class="process__step">1</div>
+            </i>
+            <h3>Step 1</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quis voluptatum saepe maiores cupiditate omnis.</p>
+          </div>
+          <div>
+            <i class="fa-solid fa-eye fa-4x process__icon my-2">
+              <div class="process__step">2</div>
+            </i>
+            <h3>Step 2</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quis voluptatum saepe maiores cupiditate omnis.</p>
+          </div>
+          <div>
+            <i class="fas fa-object-ungroup fa-4x process__icon my-2">
+              <div class="process__step">3</div>
+            </i>
+            <h3>Step 3</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quis voluptatum saepe maiores cupiditate omnis.</p>
+          </div>
+          <div>
+            <i class="fas fa-file-alt fa-4x process__icon my-2">
+              <div class="process__step">4</div>
+            </i>
+            <h3>Step 4</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quis voluptatum saepe maiores cupiditate omnis.</p>
+          </div>
+        </div>
 
 
+      </div>
+
+    </section>
+
+    <footer id="main-footer">
+      <div class="footer-content container">
+        <p>Copyright &copy; 2022.All Rights Reserved.</p>
+        <div class="social">
+          <i class="fab fa-facebook"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
+          <i class="fab fa-youtube"></i>
+        </div>
+      </div>
+    </footer>
 
 
 
